    - TODO districts -> surface conditions, pollution?
    - Added support for using machines, beacons, and modules of different quality levels
    - Added support for the new agriculture tower and its recipes
  Changes:
    - Adjusted mod for new module mechanics such as beacon profiles, machine base productivity, new productivity researches, maximum recipe productivity, and more
    - Changed the utility dialog function to request missing item delivery to create a new logistic section instead of having construction bots fulfill the order
    - Dropped Recipe Book support in favor of Factoriopedia, the new built-in recipe browser
    - Dropped support for boiler recipes, for now
    - Improved and fixed various parts of the interface
    - Updated to flib 2.0.0
  Bugfixes:
    -

---------------------------------------------------------------------------------------------------
Version: 1.1.78
Date: 09. 12. 2023
  Changes:
    - Improved visual presentation of the matrix solver choices (#200)
    - Improved preference names and descriptions slightly
  Bugfixes:
    - Fixed that items/s/machine didn't divide by the machine amount at all (#177)
    - Fixed that the viewstates didn't update when the timescale for a factory is changed (#209)
    - Fixed pasted modules not updating their effects properly (#187)
    - Fixed that beacons with incompatible modules could be pasted onto machines (#156)

---------------------------------------------------------------------------------------------------
Version: 1.1.77
Date: 05. 12. 2023
  Bugfixes:
    - Fixed a crash with the matrix solver when there are no active recipes (#172)
    - Fixed a crash when repairing specific migrated setups (#181)
    - Fixed an issue where deleting a non-selected factory would still delete the currently selected one (#203)
    - Potentially fixed a crashing issue when opening modal dialogs in multiplayer (#201)
